Fixed the issue with the main HTML hiding behind the canvas

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -4,41 +4,52 @@
 @mixin dark {
   background: #1f1a31a3;
   color: #b6a8fea3;
+  border-radius: 1.5rem;
+  z-index: 99;
+  margin: auto;
+
 }
 @mixin light {
   color: #1f1a31a3;
   background: #b6a8fea3;
+  border-radius: 1.5rem;
+  z-index: 99;
+  margin: auto;
 }
 
 canvas {
   position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
 }
+
 main {
   position: absolute;
-  width: 100vw;
   z-index: 99;
-  width: auto;
-  margin: 0rem 5rem;
-  padding: 1rem 0rem;
+  margin: 1rem;
+  padding: 1rem;
   text-align: center;
 }
 
 header {
   @include dark;
-  flex: auto;
-  padding: 2rem;
-  border-radius: 2rem;
+  max-width: 1600px;
+  padding-left: 0%;
 }
 
-.subheader {
+.dark {
+  @include dark;
+  font-size: 1.25rem;
+  line-height: 1.1;
+}
+
+.light {
   @include light;
-  margin: 25rem;
-  padding: 1rem;
+  margin: 25%;
+  margin-top: 40rem;
   font-size: 2rem;
   line-height: 1.2;
-  border-radius: .5rem;
 }
 
 h1 {
@@ -53,31 +64,16 @@ h1 {
     font-size: 2rem;
   }
   @include lg {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   @include xl {
-    font-size: 6rem;
+    font-size: 5rem;
   }
   @include breakpoint(3840px) {
-    font-size: 8rem;
+    font-size: 6rem;
   }
 }
 
-
-.dark {
-  @include dark;
-  font-size: 1.25rem;
-  line-height: 1.1;
-  border-radius: 2rem;
-}
-.light {
-  @include light;
-  margin: 25rem;
-  margin-top: 40rem;
-  font-size: 2rem;
-  line-height: 1.2;
-  border-radius: .5rem;
-}
 
 
 //This is an example of how to call the breakpoints
